--- a/piratage.html
+++ b/piratage.html
@@ -21,27 +21,35 @@
 
         <div class="content">
             <div class="inside">
-                <h3>URL</h3>   
+                <h3>PIRATAGE</h3>   
                 <p><br>
                     Une URL, pour Uniform ressource locator, est une chaine de caractères uniforme qui permet d’identifier une ressource sur le world wide web. Le format d’une URL est standardisé. Elle commence toujours par le protocole utilisé suivi de « : ».
                     <br><br>
                 </p>
-                <img src="url.jpg">
+                <img src="3__FRONT_B4_1_028_029.jpg">
                 <p><br><br>
-                    La partie suivante de l’URL représente l’hôte, identifié par son nom de domaine ou son adresse IP.  S’il est omis, l’url désigne alors un emplacement sur la machine utilisée et pas une ressource externe. 
+                    Un virus est un programme malveillant qui se propage d’hôte en hôte. Il est désigné pour modifier le comportement de l’ordinateur.  
 
-Le nom de domaine peut être préfixé d’un nom d’utilisateur et d’un mot de passe séparé du nom de domaine par une arobase. Ce qui peut servir à limiter certains accès. 
-</p><p>
-Le nom de domaine peut aussi être suffixé par le port précis à utiliser pour se connecter à la machine où la ressource est située. 
+A la différence d’un ver qui est un programme indépendant mais avec les mêmes effets, un virus va modifier un programme déjà installé sur la machine pour se camoufler.  
 
-Ensuite il y a le chemin à utiliser pour trouver la ressource. Ce chemin peut-être le chemin absolu pour trouver la ressource ou un chemin défini par le serveur contacté. 
-</p><p>
-Pour finir viennent les données complémentaires, il en existe deux types. 
+Un virus peut être obtenu de bien des manières mais des exemples communs incluent les pièces-jointes infectées, des programmes pirates modifiés et des liens frauduleux.  
 
-D’abord les requêtes, préfixées d’un point d’interrogation transmettent des données complémentaires au serveur. Comme le contenu d’un champ rempli. 
-</p><p><br>
-Ensuite les ancrages, préfixés d’un dièse, précisent un emplacement sur la page. Lors du chargement de la page, le navigateur va afficher directement l’emplacement précisé et pas le début de la page. 
+Un virus peut rester dormant sur une machine jusqu’à ce que l’utilisateur réalise une action capable de le réveiller. 
+
+Un virus peut-être très discret comme il peut-être très visible en allant du vol de données au blocage de l’ordinateur. 
                 </p>
+                <h2>
+                    GRABBING
+                </h2>
+                <p>
+                Le « banner grabbing » désigne l’obtention des bannières des ports ouvert d’un ordinateur. Ces bannières sont des métadonnées que les ports ouverts fournissent quand une requête de connexion est lancée et contiennent le nom et la version du software qui maintient ce port. 
+
+                Les pirates vont obtenir ces bannières manuellement ou avec des outils d’automatisation pour repérer les ports utilisant des softwares ayant des failles connues qu’ils pourraient utiliser pour infiltrer le système. 
+
+                Il existe deux techniques principales de « Banner Grabbing ». La manière active et la manière passive. Le banner grabbing actif consiste à contacter directement les ports au risque d’être détecté. Le banner grabbing passif, plus compliqué, vise à intercepter et observer le trafic de ces ports pour obtenir les mêmes données. 
+
+                Pour se protéger du banner grabbing, il est conseillé de réduire les ports ouverts sur ses machines en fermant les ports inutiles et inutilisé, restreindre les accès au réseau et maintenir les systèmes à jours pour s’assurer que les failles connues soient fermées au plus vite. Il est aussi possible de personnaliser les bannières pour en retirer les informations utiles aux pirates. 
+            </p>
             </div>
         </div>
     </body>
