--- a/piratage.html
+++ b/piratage.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Uniform Ressource Locator</title>
+        <title>Le piratage</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
@@ -23,11 +23,16 @@
             <div class="inside">
                 <h3>PIRATAGE</h3>   
                 <p><br>
-                    Une URL, pour Uniform ressource locator, est une chaine de caractères uniforme qui permet d’identifier une ressource sur le world wide web. Le format d’une URL est standardisé. Elle commence toujours par le protocole utilisé suivi de « : ».
+                    Le mot piratage a un certain nombre de définitions différentes dans la langue francaise, dans cet article, nous allons explorer ses différents concepts et tanter de les déminstifer.
                     <br><br>
                 </p>
                 <img src="3__FRONT_B4_1_028_029.jpg">
-                <p><br><br>
+
+                    <h2 style="text-align: center; font-size: 1.5rem;">
+                        <br><br>
+                        VIRUS
+                    </h2>
+                    <p>
                     Un virus est un programme malveillant qui se propage d’hôte en hôte. Il est désigné pour modifier le comportement de l’ordinateur.  
 
 A la différence d’un ver qui est un programme indépendant mais avec les mêmes effets, un virus va modifier un programme déjà installé sur la machine pour se camoufler.  
@@ -38,7 +43,7 @@ Un virus peut rester dormant sur une machine jusqu’à ce que l’utilisateur r
 
 Un virus peut-être très discret comme il peut-être très visible en allant du vol de données au blocage de l’ordinateur. 
                 </p>
-                <h2>
+                <h2 style="text-align: center; font-size: 1.5rem;"><br>
                     GRABBING
                 </h2>
                 <p>
@@ -49,6 +54,13 @@ Un virus peut-être très discret comme il peut-être très visible en allant du
                 Il existe deux techniques principales de « Banner Grabbing ». La manière active et la manière passive. Le banner grabbing actif consiste à contacter directement les ports au risque d’être détecté. Le banner grabbing passif, plus compliqué, vise à intercepter et observer le trafic de ces ports pour obtenir les mêmes données. 
 
                 Pour se protéger du banner grabbing, il est conseillé de réduire les ports ouverts sur ses machines en fermant les ports inutiles et inutilisé, restreindre les accès au réseau et maintenir les systèmes à jours pour s’assurer que les failles connues soient fermées au plus vite. Il est aussi possible de personnaliser les bannières pour en retirer les informations utiles aux pirates. 
+            </p>
+            <h2 style="text-align: center; font-size: 1.5rem;"><br>
+                PHISHING
+            </h2>
+            <p>
+                Le « phishing » ou « hameçonnage » en français est la pratique pirate de se faire passer pour un organisme officiel comme une banque auprès de la cible au moyen de mail et de site web ayant l’apparence de ceux envoyés par celui-ci. Les victimes vont donc réagir aux sites frauduleux comme s’il était le site officiel et introduire dedans des informations utiles au pirate comme leur données d’identifications. Le pirate peut alors se faire passer pour elles auprès de l’organisme officiel.  <br><br>
+                Il existe plusieurs formes de phishing, notamment le « spear phishing » est un phishing ciblé faisant usage d’informations que le pirate connait déjà à propos de la cible ainsi que le « whaling » quand le pirate cible une organisation en passant par ses dirigeants. 
             </p>
             </div>
         </div>
