--- a/testeur_de_logiciel.html
+++ b/testeur_de_logiciel.html
@@ -39,14 +39,15 @@
                     &ensp;-&ensp;Les tests linguistiques pour vérifier la qualité de l’internationalisation du programme. <br><br>
                 </p>
 
-
-                <p>
-                    sources
-                </p>
-                <p><a href="https://www.hellowork.com/fr-fr/metiers/testeur-logiciel.html">hellowork.com</a>
-                </p><p>
-                    <a href="	https://metiers.siep.be/metier/testeur-testeuse-logiciel/"> metiers.siep.be</a>
-                </p>
+                <div class="sources">
+                    <h2><br>
+                        sources
+                    </h2>
+                    <p><a href="https://www.hellowork.com/fr-fr/metiers/testeur-logiciel.html">https://www.hellowork.com/fr-fr/metiers/testeur-logiciel.html</a>
+                    </p><p>
+                        <a href="https://metiers.siep.be/metier/testeur-testeuse-logiciel/"> https://metiers.siep.be/metier/testeur-testeuse-logiciel/</a>
+                    </p>
+                </div>
             </div>
         </div>
     </body>
