--- a/aws.html
+++ b/aws.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Amazon Web Services</title>
+        <title>Testeur de Logiciel</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
@@ -21,15 +21,25 @@
 
         <div class="content">
             <div class="inside">
-                <h3>AMAZON WEB SERVICES</h3>   
-                <p><br>
-                    Amazon Web Services. C’est l’offre de server hosting de la multinationale Amazon. Ils furent un des premiers hébergeurs à offrir des offres variables, c’est à dire que les prix d’abonnements évoluent en fonction du trafic utilisé. Leurs prix restent aujourd’hui imbattables et c’est une des parties du business d’Amazon qui leur fait le plus de profits. <br>
-                    <br>
+                <h3>AMAZON WEB SERVICE</h3>   
+                <p>
+                    Amazon Web Services. C’est l’offre de server hosting de la multinationale Amazon. Ils furent un des premiers hébergeurs à offrir des offres variables, c’est à dire que les prix d’abonnements évoluent en fonction du trafic utilisé. Leurs prix restent aujourd’hui imbattables et c’est une des parties du business d’Amazon qui leur fait le plus de profits.
                 </p>
                 <img src="aws.jpg">
-                <p><br><br>
-                    Grâce à leur taille importante, ils ont des offres adaptées à presque tous les besoins. 
+                <p>
+                    Grâce à leur taille importante, ils ont des offres adaptées à presque tous les besoins.
                 </p>
+                <p>
+                    sources:
+                </p>
+                <p><a href="https://fr.wikipedia.org/wiki/Amazon_Web_Services">fr.wikipedia.org</a>
+                </p><p>
+                    <a href="https://en.wikipedia.org/wiki/Amazon_Web_Services"> en.wikipedia.org</a>
+                </p>
+                <p>
+                    <a href="https://en.wikipedia.org/wiki/Timeline_of_Amazon_Web_Services
+                    "> en.wikipedia.org Timeline</a></p>
+            
             </div>
         </div>
     </body>
