--- a/mySQL.html
+++ b/mySQL.html
@@ -37,6 +37,18 @@
             </p><p><br>
                 Cet état de logiciel open-source a fait qu'au cours de son existence MySQL a été rendu compatible avec la plupart des langages informatiques.
             </p>
+
+            <p>
+                sources:
+            </p>
+            <p><a href="https://fr.wikipedia.org/wiki/MySQL">fr.wikipedia.org</a>
+            </p><p>
+                <a href="https://en.wikipedia.org/wiki/MySQL"> en.wikipedia.org</a>
+            </p>
+            <p>
+                <a href="https://www.mysql.com/fr/"> mysql.com</a></p>
+            <p>
+                <a href="https://www.oracle.com/ca-fr/mysql/what-is-mysql/"> oracle.com</a></p>        
             </div>
         </div>
     </body>
