--- a/nom_de_domaine.html
+++ b/nom_de_domaine.html
@@ -46,6 +46,21 @@
                 </p><p>
                     Viennent ensuite les domaines de deuxièmes niveaux. Composés de maximum 63 caractères, ceux-ci sont en général associés directement aux site web. Il reste néanmoins possible de descendre plus bas avec des sous-domaines.    
                  </p>
+
+                 <p>
+                    sources:
+                </p>
+                <p><a href="https://fr.wikipedia.org/wiki/Nom_de_domaine">fr.wikipedia.org nom de domaine</a>
+                </p><p><a href="https://fr.wikipedia.org/wiki/Registraire_de_nom_de_domaine">fr.wikipedia.org registraire nom de domaine</a>
+                </p>
+                <p><a href="https://fr.wikipedia.org/wiki/Domain_Name_System">fr.wikipedia.org domaine name system</a>
+                </p>
+                <p><a href="https://fr.wikipedia.org/wiki/Internet_Assigned_Numbers_Authority">fr.wikipedia.org IANA</a>
+                </p>
+                <p><a href="https://fr.wikipedia.org/wiki/Domaine_de_premier_niveau">fr.wikipedia.org domaine de premier niveau</a>
+                </p>
+                <p><a href="https://fr.wikipedia.org/wiki/Registre_de_noms_de_domaine">fr.wikipedia.org registre de noms de domaine</a>
+                </p>
             </div>
         </div>
     </body>
