--- a/piratage.html
+++ b/piratage.html
@@ -62,6 +62,26 @@ Un virus peut-être très discret comme il peut-être très visible en allant du
                 Le « phishing » ou « hameçonnage » en français est la pratique pirate de se faire passer pour un organisme officiel comme une banque auprès de la cible au moyen de mail et de site web ayant l’apparence de ceux envoyés par celui-ci. Les victimes vont donc réagir aux sites frauduleux comme s’il était le site officiel et introduire dedans des informations utiles au pirate comme leur données d’identifications. Le pirate peut alors se faire passer pour elles auprès de l’organisme officiel.  <br><br>
                 Il existe plusieurs formes de phishing, notamment le « spear phishing » est un phishing ciblé faisant usage d’informations que le pirate connait déjà à propos de la cible ainsi que le « whaling » quand le pirate cible une organisation en passant par ses dirigeants. 
             </p>
+
+            <p>
+                sources:
+            </p>
+            <p><a href="https://fr.wikipedia.org/wiki/Hame%C3%A7onnage">fr.wikipedia.org hameçonnage</a>
+            </p>
+            <p><a href="https://cyberexperts.com/encyclopedia/phishing/">cyberexperts.com phishing</a>
+            </p>
+            <p><a href="https://cyberexperts.com/encyclopedia/banner-grabbing/">cyberexperts.com banner grabbing</a>
+            </p>
+            <p><a href="https://www.recordedfuture.com/threat-intelligence-101/tools-and-techniques/banner-grabbing">recordedfuture.com</a>
+            </p>
+
+            <p><a href="https://emeritus.org/blog/cybersecurity-banner-grabbing/
+                ">emeritus.org</a>
+            </p>
+
+            <p><a href="https://cyberexperts.com/encyclopedia/virus/">cyberexperts.com virus</a>
+            </p>
+
             </div>
         </div>
     </body>
