--- a/serveur_web.html
+++ b/serveur_web.html
@@ -33,6 +33,14 @@
                     <br><br>
                     Ces ressources peuvent être envoyée tel quelles auxquels cas ont les considèrent comme statiques ou construite au cas par cas par le serveur. On les considère alors comme des ressources dynamiques.                      <br><br>
                 </p>
+                <p>
+                    sources:
+                </p>
+                <p><a href="https://fr.wikipedia.org/wiki/Serveur_web">fr.wikipedia.org</a>
+                </p><p>
+                    <a href="https://www.lemagit.fr/definition/Serveur-Web
+                    "> lemagit.fr</a> 
+                </p>
             </div>
         </div>
     </body>
