--- a/testeur_de_logiciel.html
+++ b/testeur_de_logiciel.html
@@ -7,11 +7,11 @@
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
     <body>
-        <header>
+        <a href="./index.html" class="header">
             <img class="logo" style="margin-right: auto;" src="logoG.svg">
             <img class="logo" style="margin: auto;" src="logoLOGO.svg">
-            <img class="logo" style="margin-left:auto;" src="logoB.svg  ">
-        </header>
+            <img class="logo" style="margin-left:auto;" src="logoB.svg">
+        </a>
         <footer>
             <div class="footer-container">
                 <img src="burgFichier 24.svg">
@@ -55,7 +55,7 @@
 <script>
 
 function makeHeaderFixedOnScroll() {
-    const header = document.querySelector('header');
+    const header = document.querySelector('.header');
     const stickyClass = 'fixed'; // Class to apply for fixed positioning
 
     // Function to toggle fixed class based on scroll position
