--- a/aws.html
+++ b/aws.html
@@ -7,11 +7,11 @@
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
     <body>
-        <header>
+        <a class="header">
             <img class="logo" style="margin-right: auto;" src="logoG.svg">
             <img class="logo" style="margin: auto;" src="logoLOGO.svg">
             <img class="logo" style="margin-left:auto;" src="logoB.svg  ">
-        </header>
+        </a>
         <footer>
             <div class="footer-container">
                 <img src="burgFichier 24.svg">
@@ -27,11 +27,12 @@
                 </p>
                 <img src="aws.jpg">
                 <p>
-                    Grâce à leur taille importante, ils ont des offres adaptées à presque tous les besoins.
+                    Grâce à leur taille importante, ils ont des offres adaptées à presque tous les besoins, entre autre; du server hosting, du content managament, des databases pré-existantes 
                 </p>
-                <p>
+                <div class="sources">
+                <h2><br>
                     sources:
-                </p>
+                </h2>
                 <p><a href="https://fr.wikipedia.org/wiki/Amazon_Web_Services">fr.wikipedia.org</a>
                 </p><p>
                     <a href="https://en.wikipedia.org/wiki/Amazon_Web_Services"> en.wikipedia.org</a>
@@ -39,6 +40,7 @@
                 <p>
                     <a href="https://en.wikipedia.org/wiki/Timeline_of_Amazon_Web_Services
                     "> en.wikipedia.org Timeline</a></p>
+                </div>
             
             </div>
         </div>
@@ -47,7 +49,7 @@
 <script>
 
 function makeHeaderFixedOnScroll() {
-    const header = document.querySelector('header');
+    const header = document.querySelector('.header');
     const stickyClass = 'fixed'; // Class to apply for fixed positioning
 
     // Function to toggle fixed class based on scroll position
