--- a/aws.html
+++ b/aws.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
     <body>
-        <a class="header">
+        <a class="header" href="./index.html">
             <img class="logo" style="margin-right: auto;" src="logoG.svg">
             <img class="logo" style="margin: auto;" src="logoLOGO.svg">
             <img class="logo" style="margin-left:auto;" src="logoB.svg  ">
