iterations sur les sources

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
             <div class="type3">
                 <a href="url.html">
-                <div class="article">
+                <div class="article" style="border-left:0;">
                     <h3>URL</h3>
                     <img src="url.jpg">
                     <p>
@@ -121,8 +121,8 @@
                     </p>
                 </div>
                 </a>
-                <a href="w3c.html">
-                <div class="article">
+                <a href="w3c.html" style="border:0;border-left:2px;border-style:solid">
+                <div class="article" style="border: 0;">
                     <h3>W3C</h3>
                     <img src="1535539623151.jpg">
                     <p>
