--- a/testeur_de_logiciel.html
+++ b/testeur_de_logiciel.html
@@ -30,7 +30,7 @@
                 <p>
                     <br><br>Un testeur de logiciel va produire un rapport pour chaque version du produit contenant les erreurs logicielles mais aussi des conseils qualité et des démonstration concrètes des cas d’utilisations. En sommes, il va vérifier que le programme fonctionne et réponds bien à toutes les attentes du client. 
 </p><p>
-                    <br><br>Afin de réaliser ce rapport, le testeur logiciel va donc identifier, implémenter, installer et exécuter les tests les plus adaptés. Il va ensuite interpréter les résultats de ces tests.  <br>
+                    <br>Afin de réaliser ce rapport, le testeur logiciel va donc identifier, implémenter, installer et exécuter les tests les plus adaptés. Il va ensuite interpréter les résultats de ces tests.  <br>
 </p><p>                   <br>Les tests réalisés peuvent être classés dans plusieurs groupes :  <br><br>
    
                     &ensp;-&ensp;Les tests fonctionnels pour vérifier l’adhérence au cahier des charges.<br>
