--- a/aws.html
+++ b/aws.html
@@ -23,10 +23,10 @@
             <div class="inside">
                 <h3>AMAZON WEB SERVICE</h3>   
                 <p>
-                    Amazon Web Services. C’est l’offre de server hosting de la multinationale Amazon. Ils furent un des premiers hébergeurs à offrir des offres variables, c’est à dire que les prix d’abonnements évoluent en fonction du trafic utilisé. Leurs prix restent aujourd’hui imbattables et c’est une des parties du business d’Amazon qui leur fait le plus de profits.
-                </p>
+                    Amazon Web Services. C’est l’offre de server hosting de la multinationale Amazon. Ils furent un des premiers hébergeurs à offrir des offres variables, c’est à dire que les prix d’abonnements évoluent en fonction du trafic utilisé. Leurs prix restent aujourd’hui imbattables et c’est une des parties du business d’Amazon qui leur fait le plus de profits.<br><br>
+                    <br></p>
                 <img src="aws.jpg">
-                <p>
+                <p><br><br>
                     Grâce à leur taille importante, ils ont des offres adaptées à presque tous les besoins, entre autre; du server hosting, du content managament, des databases pré-existantes 
                 </p>
                 <div class="sources">
