--- a/url.html
+++ b/url.html
@@ -42,12 +42,13 @@ D’abord les requêtes, préfixées d’un point d’interrogation transmettent
 </p><p><br>
 Ensuite les ancrages, préfixés d’un dièse, précisent un emplacement sur la page. Lors du chargement de la page, le navigateur va afficher directement l’emplacement précisé et pas le début de la page. 
                 </p>
-                <p>
+                <div class="sources">
+                <h2><br>
                     sources:
-                </p>
+                </h2>
                 <p><a href="https://fr.wikipedia.org/wiki/Uniform_Resource_Locator">fr.wikipedia.org</a>
                 </p>
-
+                </div>
             </div>
         </div>
     </body>
