--- a/w3c.html
+++ b/w3c.html
@@ -45,14 +45,16 @@
                     
                     Viennent ensuite les domaines de deuxièmes niveaux. Composés de maximum 63 caractères, ceux-ci sont en général associés directement aux site web. Il reste néanmoins possible de descendre plus bas avec des sous-domaines. 
                 </p>
-                <p>
+                <div class="sources">
+                <h2><br>
                     sources:
-                </p>
+                </h2>
                 <p><a href="https://en.wikipedia.org/wiki/World_Wide_Web_Consortium">en.wikipedia.org</a>
                 </p>
                 <p><a href="https://www.w3.org/">w3.org</a>
                 </p><p><a href="https://fr.wikipedia.org/wiki/Standards_du_Web">fr.wikipedia.org Standards_du_Web</a>
                 </p>
+                </div>
             </div>
         </div>
     </body>
