--- a/template_web.html
+++ b/template_web.html
@@ -30,7 +30,7 @@
                 <p>
                     <br><br>
                     Un « template », ou « gabarit » en français est, dans le contexte informatique, un moyen de séparer le fond de la forme. 
-                    La présentation des page web est souvent gérée par des documents CSS (Cascading Style Sheet) remplie par le développeur mais peux aussi être fournie préremplie par les outils de créations de site.                  </p>
+                    La présentation des pages web est souvent gérée par des documents CSS (Cascading Style Sheet) remplie par le développeur mais peut aussi être fournie préremplie par les outils de créations de site.                  </p>
             
 
                 <div class="sources">
